Text Formatter/tests/error/badparam2.tx
\textheight{-1}Tries to make text height negative
